@@ -1,5 +1,6 @@
 package io.arrogantprogrammer.thanksgivingai;
 
+import dev.langchain4j.model.image.ImageModel;
 import io.arrogantprogrammer.thanksgivingai.api.*;
 import io.arrogantprogrammer.thanksgivingai.domain.ThanksgivingMenu;
 import io.arrogantprogrammer.thanksgivingai.rest.ChatGPTService;
@@ -7,7 +8,9 @@ import io.quarkus.logging.Log;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 
+import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -17,6 +20,18 @@ public class AiService {
     @Inject
     ChatGPTService chatGPTService;
 
+    @Inject
+    ImageModel imageModel;
+
+    public URL imageUrl() {
+        var response = imageModel.generate("Create a menu for Thanksgiving dinner.");
+        try {
+            return response.content().url().toURL();
+        } catch (MalformedURLException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
     public ThanksgivingMenuRecord createMenu(CreateMenuCommand createMenuCommand) {
         String prompt = ThanksgivingMenu.createPrompt(createMenuCommand.stateCodes());
         ThanksgivingMenuRecord result = chatGPTService.chat(prompt);
@@ -24,34 +39,12 @@ public class AiService {
         return result;
     }
 
-    private List<ThanksgivingMenuItemRecord> mockMains() {
-        return new ArrayList<>(){{
-            add(new ThanksgivingMenuItemRecord("Turkey", "Roasted"));
-            add(new ThanksgivingMenuItemRecord( "Ham", "Honey Baked"));
-            add(new ThanksgivingMenuItemRecord("Tofurkey", "Vegan"));
-        }};
-    }
-
-    private List<ThanksgivingMenuItemRecord> mockSides() {
-        return new ArrayList<>(){{
-            add(new ThanksgivingMenuItemRecord("Mashed Potatoes", "Creamy"));
-            add(new ThanksgivingMenuItemRecord("Green Beans", "Almondine"));
-            add(new ThanksgivingMenuItemRecord("Cranberry Sauce", "Homemade"));
-            add(new ThanksgivingMenuItemRecord("Mac & Cheese", "Baked"));
-            add(new ThanksgivingMenuItemRecord("Sweet Potatoes", "Candied"));
-            add(new ThanksgivingMenuItemRecord("Rolls", "Buttery"));
-        }};
-    }
-
-    private List<ThanksgivingMenuItemRecord> mockDesserts() {
-        return new ArrayList<>(){{
-            add(new ThanksgivingMenuItemRecord("Pumpkin Pie", "Traditional"));
-            add(new ThanksgivingMenuItemRecord("Coconut Cake", "Layered"));
-        }};
-    }
-
     public ThanksgivingInvitation createInvitation(CreateInvitationCommand createInvitationCommand) {
         Log.debugf("Creating invitation for %s", createInvitationCommand.thanksgivingMenuRecord());
-        return new ThanksgivingInvitation(URI.create("http://localhost:8080/static/thanksgiving-menu-01.jpg"), createInvitationCommand.thanksgivingMenuRecord());
+        try {
+            return new ThanksgivingInvitation(new URL("http://localhost:8080/static/thanksgiving-menu-01.jpg"), createInvitationCommand.thanksgivingMenuRecord());
+        } catch (MalformedURLException e) {
+            throw new RuntimeException(e);
+        }
     }
 }
